external-crates/move/crates/move-compiler/tests/move_check/parser/expr_abort_missing_value.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/expr_abort_missing_value.move:4:22
  │
4 │         if (v > 100) abort
  │                      ^^^^^ Clever `assert!`, `abort`, and `#[error]` are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

